MCLK stuck at 1000MHz on 6800 XT on some refresh rates
Brief summary of the problem:
Hi! I'm somewhat new to discrete GPUs, so maybe I'm missing something, but it looks like my card's memory clock is stuck at 1 Ghz.
I did try some random kernel module parameters (amdgpu.ppfeaturemask=0xfffd7fff amdgpu.runpm=1
), but they seem to have no effect. Setting /sys/class/drm/card0/device/power_dpm_force_performance_level
to low
also has no effect on the memory clocks.
Hardware description:
- CPU: Ryzen 5950X
- GPU: Radeon 6800 XT
- Display: Philips 326M6VJRMB_00
- Type of Diplay Connection: DP
System infomration:
- Distro name and Version: Arch Linux
- Kernel version: 5.10.0-rc6-1-mainline
How to reproduce the issue:
$ cat /sys/class/drm/card0/device/pp_dpm_mclk
0: 96Mhz
1: 456Mhz
2: 673Mhz
3: 1000Mhz *
# cat /sys/kernel/debug/dri/0/amdgpu_pm_info
GFX Clocks and Power:
1000 MHz (MCLK)
500 MHz (SCLK)
0 MHz (PSTATE_SCLK)
0 MHz (PSTATE_MCLK)
875 mV (VDDGFX)
59.0 W (average GPU)
GPU Temperature: 55 C
GPU Load: 0 %
MEM Load: 1 %
SMC Feature Mask: 0x00003763a36b4dff
VCN: Disabled
Clock Gating Flags Mask: 0x38018300
Graphics Medium Grain Clock Gating: Off
Graphics Medium Grain memory Light Sleep: Off
Graphics Coarse Grain Clock Gating: Off
Graphics Coarse Grain memory Light Sleep: Off
Graphics Coarse Grain Tree Shader Clock Gating: Off
Graphics Coarse Grain Tree Shader Light Sleep: Off
Graphics Command Processor Light Sleep: Off
Graphics Run List Controller Light Sleep: Off
Graphics 3D Coarse Grain Clock Gating: Off
Graphics 3D Coarse Grain memory Light Sleep: Off
Memory Controller Light Sleep: On
Memory Controller Medium Grain Clock Gating: On
System Direct Memory Access Light Sleep: Off
System Direct Memory Access Medium Grain Clock Gating: Off
Bus Interface Medium Grain Clock Gating: Off
Bus Interface Light Sleep: Off
Unified Video Decoder Medium Grain Clock Gating: Off
Video Compression Engine Medium Grain Clock Gating: Off
Host Data Path Light Sleep: On
Host Data Path Medium Grain Clock Gating: On
Digital Right Management Medium Grain Clock Gating: Off
Digital Right Management Light Sleep: Off
Rom Medium Grain Clock Gating: Off
Data Fabric Medium Grain Clock Gating: Off
Address Translation Hub Medium Grain Clock Gating: On
Address Translation Hub Light Sleep: On
Attached files:
Edited by Laurențiu Nicola